Add some styling using flex box

--- a/index.html
+++ b/index.html
@@ -13,13 +13,13 @@
         <header>
             <nav class="navbar">
                 <a href="#" >Get the app</a>
-                <div class="navabrMenuContainer">
+                <div class="navbarMenuContainer">
                     <a href="#" class="link">Inventor relations</a>
                     <a href="#" class="link">Add restaurant</a>
                     <a href="#" class="link">Login</a>
                     <a href="#" class="link">Sign up</a>
                     <a href="#" class="user_icon">
-                        <i class="fa-regular fa-user"></i>      
+                    <i class="fa-regular fa-user"></i>      
                     </a>
                 </div>
             </nav>
@@ -120,8 +120,81 @@
                 </div>
             </div>
     </section>
-    <footer class="footer">
-        
+    <footer >
+        <div class="footerContainer">
+            <div class="TopFooterSection">
+                <img src="./media/footerlogo.avif"/>
+                    <div class="buttonContainer">
+                        <button><img src="./media/in.png"/>
+                            India</button>    
+                        <button>
+                            <i class="fa fa-globe"></i>
+                            English
+                        </button>
+                    </div>
+                </div>
+                <div class="navigationContainer">
+                <div class="link__container">
+                    <h5>ABOUT ZOMATO</h5>
+                    <a class="footer__link" href="#">Who we are</a>
+                    <a class="footer__link" href="#">Blogs</a>
+                    <a class="footer__link" href="#">Work with us</a>
+                    <a class="footer__link" href="#">Investore Relations</a>
+                    <a class="footer__link" href="#">Report Fraud</a>
+                    <a class="footer__link" href="#">Conatct Us</a>
+                </div>
+
+                <div class="link__container">
+                    <h5>ZOMAVERSE</h5>
+                    <a class="footer__link" href="#">Zomato</a>
+                    <a class="footer__link" href="#">Feeding</a>
+                    <a class="footer__link" href="#">Hyperpure</a>
+                    <a class="footer__link" href="#">Zomaland</a>
+                </div>
+
+                <div class="link__container">
+                    <h5>FOR RESTURANTS</h5>
+                    <a class="footer__link" href="#">Partner With Us</a>
+                    <a class="footer__link" href="#">Apps For You</a>
+                    <br>
+                    <h5>ENTERPRICES</h5>
+                    <a class="footer__link" href="#">Work with us</a>
+                    <a class="footer__link" href="#">Zomato for work</a>
+                </div>
+
+                <div class="link__container">
+                    <h5>LEARN MORE</h5>
+                    <a class="footer__link" href="#">Privacy</a>
+                    <a class="footer__link" href="#">Security</a>
+                    <a class="footer__link" href="#">Terms</a>
+                    <a class="footer__link" href="#">SiteMap</a>
+                </div>      
+
+                    <div class="link__container">
+                        <h5>SOCIAL LINKS</h5>
+                        <div class="social__links_container">
+                        <button><i class="fa-brands fa-linkedin-in"></i></button>
+                        <button><i class="fa-brands fa-instagram"></i></button>
+                        <button><i class="fa-brands fa-twitter"></i></button>
+                        <button><i class="fa-brands fa-youtube"></i></button>
+                        <button><i class="fa-brands fa-facebook"></i></button>
+                        </div>
+                        <br>
+                        <img src="./media/appleStore.webp" alt="Footer Logos" class="footer__section_logos">
+                        <img src="./media/playStore.webp" alt="Footer Logos" class="footer__section_logos">
+                    </div>
+                    
+                </div>
+        </div>
+        <hr>
+        <div class="disclaimer">
+            <p>
+                By continuing past this page, you agree to our Terms of Service,
+                Cookie Policy, Privacy Policy and Content Policies. All trademarks
+                are properties of their respective owners. 2008-2022 © Zomato™ Ltd.
+                All rights reserved.This is just a practice clone!
+              </p>
+        </div>
     </footer>
 
 </body>
