--- a/index.html
+++ b/index.html
@@ -1,18 +1,18 @@
 <!DOCTYPE html>
 <html lang="en">    
 <head>
-    <meta charset="UTF-8">
+    <meta charset="UTF-8"> 
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Zomato landing page clone</title>
     <link rel="stylesheet" href="./style.css"/>
-    <link rel="icon"  href="./media/Zlogo.webp">
+    <link rel="icon"  href="./media/Zlogo.webp">    
     <script src="https://kit.fontawesome.com/49b1428e18.js" crossorigin="anonymous"></script>   
 </head> 
 <body>
     <section class="heroSection">
         <header>
             <nav class="navbar">
-                <a href="#" >Get the app</a>
+                <a href="#" >Get the App</a>
                 <div class="navbarMenuContainer">
                     <a href="#" class="link">Inventor relations</a>
                     <a href="#" class="link">Add restaurant</a>
@@ -29,11 +29,11 @@
             <h1 class="heroSectionTitle">Discover the best food & drinks in Bangalore</h1>
             <div class="heroSectionInputContainer">
                 <div class="inputLocationSelectContainer"><input type="text" placeholder="Bangalore"/></div>
-                <div class="inputRestaurantSelectContainer"><input type="text" placeholder="Search for your favourite restraunts"/></div>
+                <div class="inputRestrauntSelectContainer"><input type="text" placeholder="Search for a restraunt,cuisine or dish" size="30%"></div>
             </div>
         </div>
     </section>
-    <section class=".ServicesOfferedContainer">
+    <section class="ServicesOfferedContainer">
         <div class="weOfferCard">
             <img src="./media/item1.avif">
             <div class="weOfferContent">
@@ -41,14 +41,14 @@
                 <p>Stay Home and order to your door</p>
             </div>
         </div>
-        <div class="weOfferCard"></div>
+        <div class="weOfferCard">
             <img src="./media/item2.avif">
             <div class="weOfferContent">
                 <h2>Dining</h2>
                 <p>View citi's great dining options</p>
             </div>
         </div>
-        <div class="weOfferCard"></div>
+        <div class="weOfferCard">
             <img src="./media/item3.avif">
             <div class="weOfferContent">
                 <h2>NightLife and Clubs</h2>
@@ -61,35 +61,37 @@
         <h1>collections</h1>
         <div class="subheadingContainer">
             <span>Explore curated lists of top restraunts, cafes,pubs.</span>
-            <span>All Collections in Bangalore.</span>
+            <span class="red">All Collections in Bangalore.</span>
         </div>
         <div class="collectionsCardContainer">
-            <div class="overlay"></div>
-            <div class="collectionContent">
-                <h2>Live Cricket Screening</h2>
-                <span>60 places</span>     
-            </div>  
-        </div>
-        <div class="collectionsCardContainer">
-            <div class="overlay"></div>
-            <div class="collectionContent">
-                <h2>Some Special Sweets</h2>
-                <span>80 places</span>     
-            </div>  
-        </div>
-        <div class="collectionsCardContainer">
-            <div class="overlay"></div>
-            <div class="collectionContent">
-                <h2>Newly opened restraunts</h2>
-                <span>90 places</span>     
-            </div>  
-        </div>
-        <div class="collectionsCardContainer">
-            <div class="overlay"></div>
-            <div class="collectionContent">
-                <h2>Great Cafes, near me</h2>
-                <span>50 places</span>     
-            </div>  
+            <div class="card1">
+                <div class="overlay"></div>
+                <div class="collectionContent">
+                    <h2>Live Cricket Screening</h2>
+                    <span>60 places</span>     
+                </div>  
+            </div>
+            <div class="card2">
+                <div class="overlay"></div>
+                <div class="collectionContent">
+                    <h2>Some Special Sweets</h2>
+                    <span>80 places</span>     
+                </div>  
+            </div>
+            <div class="card3">
+                <div class="overlay"></div>
+                <div class="collectionContent">
+                    <h2>Newly opened restraunts</h2>
+                    <span>90 places</span>     
+                </div>  
+            </div>
+            <div class="card4">
+                <div class="overlay"></div>
+                <div class="collectionContent">
+                    <h2>Great Cafes, near me</h2>
+                    <span>50 places</span>     
+                </div>  
+            </div>
         </div>
     </section>
     <section class="getAppContainer">
