--- a/index.html
+++ b/index.html
@@ -64,28 +64,28 @@
             <span class="red">All Collections in Bangalore.</span>
         </div>
         <div class="collectionsCardContainer">
-            <div class="card1">
+            <div class="card card1">
                 <div class="overlay"></div>
                 <div class="collectionContent">
                     <h2>Live Cricket Screening</h2>
                     <span>60 places</span>     
                 </div>  
-            </div>          
-            <div class="card2">         
+            </div>                  
+            <div class="card card2">         
                 <div class="overlay"></div>
                 <div class="collectionContent">
                     <h2>Some Special Sweets</h2>
                     <span>80 places</span>     
                 </div>  
             </div>
-            <div class="card3">
+            <div class="card card3">
                 <div class="overlay"></div>
                 <div class="collectionContent">
                     <h2>Newly opened restraunts</h2>
                     <span>90 places</span>     
                 </div>  
             </div>
-            <div class="card4">
+            <div class="card card4">
                 <div class="overlay"></div>
                 <div class="collectionContent">
                     <h2>Great Cafes, near me</h2>
