Add responsive cards and form

--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@
                     </div>
                 </div>
                 <div class="emailInputContainer">
-                    <input type="text" placeholder="youremail@domain.com">
+                    <input type="text" placeholder="youremail@domain.com" size="40%">
                     <a href="#">Share App Link</a>
                 </div>
                 <div class="appFromContainer">
