Complete styling for 600 px + screens

--- a/index.html
+++ b/index.html
@@ -127,7 +127,7 @@
             <div class="TopFooterSection">
                 <img src="./media/footerlogo.avif"/>
                     <div class="buttonContainer">
-                        <button><img src="./media/in.png"/>
+                            <button><img src="./media/in.png"/>
                             India</button>    
                         <button>
                             <i class="fa fa-globe"></i>
@@ -188,13 +188,12 @@
                     
                 </div>
         </div>
-        <hr>
         <div class="disclaimer">
             <p>
                 By continuing past this page, you agree to our Terms of Service,
                 Cookie Policy, Privacy Policy and Content Policies. All trademarks
                 are properties of their respective owners. 2008-2022 © Zomato™ Ltd.
-                All rights reserved.This is just a practice clone!
+                All rights reserved.
               </p>
         </div>
     </footer>
